# riff-wave

./: Cargo.toml  README.md
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html  type.NetworkEndian.html
doc/implementors/core/convert/: trait.From.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/ops/: trait.Drop.js
doc/implementors/core/ops/drop/: trait.Drop.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/implementors/std/error/: trait.Error.js
doc/riff_wave/: all.html  constant.FORMAT_EXTENDED.html  constant.FORMAT_UNCOMPRESSED_PCM.html  constant.MAX_I24_VALUE.html  constant.MIN_I24_VALUE.html  enum.Format.html  enum.ReadError.html  enum.ReadErrorKind.html  enum.WriteError.html  index.html  sidebar-items.js  struct.PcmFormat.html  struct.WaveReader.html  struct.WaveWriter.html  type.ReadResult.html  type.WriteResult.html
doc/riff_wave/reader/: enum.ReadError.html  enum.ReadErrorKind.html  sidebar-items.js  struct.WaveReader.html  type.ReadResult.html
doc/riff_wave/writer/: enum.WriteError.html  sidebar-items.js  struct.WaveWriter.html  type.WriteResult.html
doc/src/byteorder/: lib.rs.html  new.rs.html
doc/src/riff_wave/: lib.rs.html  reader.rs.html  writer.rs.html
doc/src/riff_wave/src/: lib.rs.html  reader.rs.html  writer.rs.html
examples/: TODO  playback.rs  readme-example.rs
src/: lib.rs  reader.rs  writer.rs
tests/: lib.rs
